--- a/Project_Alin/index.html
+++ b/Project_Alin/index.html
@@ -30,8 +30,8 @@
 
     <!-- Hero/Main Section -->
     <section class="landing" id="home">
-      <main class="content">
-        <div class="content-left">
+      <main class="content" id="main-content">
+        <div class="content-left" id="left-area">
           <h1>GET STARTED</h1>
           <img
             src="/Project_Alin/Asset/ilustrasi.png"
@@ -58,5 +58,6 @@
       </div>
     </footer>
     <!-- Footer -->
+    <script src="/Project_Alin/JS/script.js"></script>
   </body>
 </html>
