--- a/Project_Alin/camera_page.html
+++ b/Project_Alin/camera_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upload Dataset</title>
+    <title>Camera Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,24 +28,20 @@
     <!-- Navbar -->
 
     <!-- Hero/Main Section -->
-    <section class="landing" id="dataset">
-      <main class="content">
-        <!-- Konten Kiri: Icon Kamera dan Teks -->
-        <div class="content-left">
-          <p class="desc">Masukkan dataset anda</p>
-          <div class="folder-icon"></div>
-          <p class="note">
-            Jika sudah menambahkan dataset, arahkan kursor ke gambar.
-          </p>
-        </div>
-        <!-- Konten Kanan: Ilustrasi dan Teks -->
-        <div class="content-right">
-          <h1>INSERT DATASET</h1>
-          <img
-            src="/Project_Alin/Asset/ilustrasi.png"
-            alt="Ilustrasi"
-            class="illustration"
-          />
+    <section class="landing" id="home">
+      <main class="camera-page-content">
+        <div class="camera-page-box">
+          <div class="camera-page-left">
+            <div class="camera-page-icon"></div>
+          </div>
+          <div class="camera-page-right">
+            <p class="camera-page-desc">
+              Posisikan wajah anda<br />di tengah kamera
+            </p>
+            <button class="camera-page-next">
+              Next <span style="font-size: 1.2em">&#8594;</span>
+            </button>
+          </div>
         </div>
       </main>
     </section>
