--- a/Project_Alin/index.html
+++ b/Project_Alin/index.html
@@ -21,9 +21,9 @@
         <img src="/Project_Alin/Asset/home_icon.svg" alt="Home" />
       </a>
       <div class="navbar-nav">
-        <a href="index.html">Tentang Project</a>
-        <a href="#">Panduan Singkat</a>
-        <a href="#">Tentang Kami</a>
+        <a href="Navigation/tentang_project.html" class="nav-link" id="nav-project">Tentang Project</a>
+        <a href="Navigation/panduan_singkat.html" class="nav-link" id="nav-panduan">Panduan Singkat</a>
+        <a href="Navigation/tentang_kami.html" class="nav-link" id="nav-kami">Tentang Kami</a>
       </div>
     </nav>
     <!-- Navbar -->
