--- a/Project_Alin/camera_page.html
+++ b/Project_Alin/camera_page.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Project_Alin/CSS/style.css" />
+    <link rel="stylesheet" href="/Project_Alin/CSS/camera_page.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -20,9 +21,21 @@
         <img src="/Project_Alin/Asset/home_icon.svg" alt="Home" />
       </a>
       <div class="navbar-nav">
-        <a href="Navigation/tentang_project.html" class="nav-link" id="nav-project">Tentang Project</a>
-        <a href="Navigation/panduan_singkat.html" class="nav-link" id="nav-panduan">Panduan Singkat</a>
-        <a href="Navigation/tentang_kami.html" class="nav-link" id="nav-kami">Tentang Kami</a>
+        <a
+          href="Navigation/tentang_project.html"
+          class="nav-link"
+          id="nav-project"
+          >Tentang Project</a
+        >
+        <a
+          href="Navigation/panduan_singkat.html"
+          class="nav-link"
+          id="nav-panduan"
+          >Panduan Singkat</a
+        >
+        <a href="Navigation/tentang_kami.html" class="nav-link" id="nav-kami"
+          >Tentang Kami</a
+        >
       </div>
     </nav>
     <!-- Navbar -->
