--- a/Project_Alin/input_face.html
+++ b/Project_Alin/input_face.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/Project_Alin/CSS/input_face.css" />
     <link rel="stylesheet" href="/Project_Alin/CSS/style.css" />
   </head>
   <body>
