--- a/Project_Alin/Navigation/tentang_project.html
+++ b/Project_Alin/Navigation/tentang_project.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Project_Alin/CSS/style.css" />
+    <link rel="stylesheet" href="/Project_Alin/CSS/navigation_pages.css" />
   </head>
   <body>
     <!-- Navbar -->
