--- a/Project_Alin/dataset.html
+++ b/Project_Alin/dataset.html
@@ -20,9 +20,21 @@
         <img src="/Project_Alin/Asset/home_icon.svg" alt="Home" />
       </a>
       <div class="navbar-nav">
-        <a href="Navigation/tentang_project.html" class="nav-link" id="nav-project">Tentang Project</a>
-        <a href="Navigation/panduan_singkat.html" class="nav-link" id="nav-panduan">Panduan Singkat</a>
-        <a href="Navigation/tentang_kami.html" class="nav-link" id="nav-kami">Tentang Kami</a>
+        <a
+          href="Navigation/tentang_project.html"
+          class="nav-link"
+          id="nav-project"
+          >Tentang Project</a
+        >
+        <a
+          href="Navigation/panduan_singkat.html"
+          class="nav-link"
+          id="nav-panduan"
+          >Panduan Singkat</a
+        >
+        <a href="Navigation/tentang_kami.html" class="nav-link" id="nav-kami"
+          >Tentang Kami</a
+        >
       </div>
     </nav>
     <!-- Navbar -->
@@ -54,7 +66,7 @@
     <!-- Footer -->
     <footer>
       <div class="credit">
-        <p>Learning Labs 2024 | Face Recognition Project</p>
+        <p>-</p>
       </div>
     </footer>
     <!-- Footer -->
