--- a/Project_Alin/dataset_input.html
+++ b/Project_Alin/dataset_input.html
@@ -61,7 +61,7 @@
               <span id="fileName" class="file-name">No Chosen File</span>
             </label>
           </form>
-          <button class="folder-face-next">
+          <button class="folder-face-next" id="nextBtn" style="display: none">
             Next <span style="font-size: 1.2em">&#8594;</span>
           </button>
           <div class="dataset-desc">
@@ -84,6 +84,7 @@
       const chooseFileBtn = document.getElementById("chooseFileBtn");
       const folderInput = document.getElementById("folderInput");
       const fileName = document.getElementById("fileName");
+      const nextBtn = document.getElementById("nextBtn");
 
       chooseFileBtn.addEventListener("click", function (e) {
         e.preventDefault();
@@ -96,9 +97,11 @@
             ? folderInput.files[0].webkitRelativePath.split("/")[0]
             : folderInput.files[0].name;
           chooseFileBtn.classList.add("active");
+          nextBtn.style.display = "block";
         } else {
           fileName.textContent = "No Chosen File";
           chooseFileBtn.classList.remove("active");
+          nextBtn.style.display = "none";
         }
       });
     </script>
