--- a/Project_Alin/dataset_input.html
+++ b/Project_Alin/dataset_input.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="/Project_Alin/CSS/style.css" />
     <link rel="stylesheet" href="/Project_Alin/CSS/folder_face_page.css" />
+    <link rel="stylesheet" href="/Project_Alin/CSS/popup.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -64,9 +65,7 @@
           <button class="folder-face-next" id="nextBtn" style="display: none">
             Next <span style="font-size: 1.2em">&#8594;</span>
           </button>
-          <div class="dataset-desc">
-            Dataset harus berupa folder, tidak bisa berupa foto
-          </div>
+          <div class="dataset-desc"></div>
         </div>
       </main>
     </section>
@@ -79,6 +78,19 @@
       </div>
     </footer>
     <!-- Footer -->
+
+    <!-- Pop up sukses -->
+    <div id="popup-success" class="popup-success">
+      <div class="popup-success-box">
+        <img
+          src="/Project_Alin/Asset/checkmark.png"
+          alt="Success"
+          class="popup-checkmark"
+        />
+        <div class="popup-success-text">Dataset berhasil ditambahkan</div>
+      </div>
+    </div>
+
     <script>
       // Custom file input logic
       const chooseFileBtn = document.getElementById("chooseFileBtn");
@@ -103,6 +115,15 @@
           chooseFileBtn.classList.remove("active");
           nextBtn.style.display = "none";
         }
+      });
+
+      // Tampilkan popup saat tombol Next diklik
+      nextBtn.addEventListener("click", function (e) {
+        e.preventDefault();
+        document.getElementById("popup-success").style.display = "flex";
+        setTimeout(function () {
+          document.getElementById("popup-success").style.display = "none";
+        }, 2000);
       });
     </script>
   </body>
