--- a/Project_Alin/dataset_input2.html
+++ b/Project_Alin/dataset_input2.html
@@ -79,16 +79,7 @@
     </footer>
     <!-- Footer -->
 
-    <!-- Pop up sukses -->
-    <div id="popup-success" class="popup-success">
-      <div class="popup-success-box">
-        <img
-          src="/Project_Alin/Asset/checkmark.png"
-          alt="Success"
-          class="popup-checkmark"
-        />
-        <div class="popup-success-text">Dataset berhasil ditambahkan</div>
-      </div>
+   
     </div>
 
     <script>
@@ -124,6 +115,23 @@
         setTimeout(function () {
           document.getElementById("popup-success").style.display = "none";
         }, 2000);
+      });
+    </script>
+
+    <!-- Tempatkan sebelum </body> -->
+    <script>
+      // Fungsi untuk load popup.html ke halaman
+      function loadPopup(callback) {
+        fetch("/Project_Alin/popup.html")
+          .then((res) => res.text())
+          .then((html) => {
+            document.body.insertAdjacentHTML("beforeend", html);
+            if (callback) callback();
+          });
+      }
+      // Panggil saat halaman siap
+      document.addEventListener("DOMContentLoaded", function () {
+        loadPopup();
       });
     </script>
   </body>
