--- a/Project_Alin/folder_face_page.html
+++ b/Project_Alin/folder_face_page.html
@@ -70,19 +70,26 @@
       </div>
     </footer>
     <!-- Footer -->
-    <!-- Pop up sukses -->
-    <div id="popup-success" class="popup-success">
-      <div class="popup-success-box">
-        <img
-          src="/Project_Alin/Asset/checkmark.png"
-          alt="Success"
-          class="popup-checkmark"
-        />
-        <div class="popup-success-text">Wajah berhasil diperoleh</div>
-      </div>
-    </div>
 
     <script>
+      // Fungsi untuk load popup.html ke halaman
+      function loadPopup(callback) {
+        fetch("/Project_Alin/popup.html")
+          .then((res) => res.text())
+          .then((html) => {
+            document.body.insertAdjacentHTML("beforeend", html);
+            if (callback) callback();
+          });
+      }
+      // Panggil saat halaman siap
+      document.addEventListener("DOMContentLoaded", function () {
+        loadPopup(function () {
+          // Ganti pesan popup khusus halaman ini
+          const popupText = document.getElementById("popup-success-text");
+          if (popupText) popupText.textContent = "Wajah berhasil diperoleh";
+        });
+      });
+
       // Custom file input logic
       const chooseFileBtn = document.getElementById("chooseFileBtn");
       const folderInput = document.getElementById("folderInput");
@@ -112,7 +119,6 @@
         .addEventListener("click", function (e) {
           e.preventDefault();
           document.getElementById("popup-success").style.display = "flex";
-          // (Opsional) Tutup popup otomatis setelah 2 detik
           setTimeout(function () {
             document.getElementById("popup-success").style.display = "none";
           }, 2000);
