--- a/Project_Alin/dataset_input2.html
+++ b/Project_Alin/dataset_input2.html
@@ -115,7 +115,11 @@
         setTimeout(function () {
           document.getElementById("popup-success").style.display = "none";
         }, 2000);
-      });
+        const popupText = document.getElementById("popup-success-text");
+          if (popupText) popupText.textContent = "Dataset berhasil ditambahkan";
+        });
+      
+      
     </script>
 
     <!-- Tempatkan sebelum </body> -->
