--- a/Project_Alin/result.html
+++ b/Project_Alin/result.html
@@ -33,53 +33,68 @@
 
     <main class="result-main">
       <div class="result-container">
-        <div class="result-card">
-          <div class="result-title">Wajah Anda</div>
-          <div class="result-image-box">
-            <img
-              src="/Project_Alin/Asset/camera_icon.svg"
-              alt="Wajah Anda"
-              class="result-camera-icon"
-            />
+        <div class="result-card-group">
+          <div class="result-card">
+            <div class="result-title">Wajah Anda</div>
+            <div class="result-image-box">
+              <img
+                src="/Project_Alin/Asset/camera_icon.svg"
+                alt="Wajah Anda"
+                class="result-camera-icon"
+              />
+            </div>
+          </div>
+          <div class="result-card">
+            <div class="result-title">Hasil pencocokan</div>
+            <div class="result-image-box">
+              <img
+                src="/Project_Alin/Asset/camera_icon.svg"
+                alt="Hasil Pencocokan"
+                class="result-camera-icon"
+              />
+            </div>
           </div>
         </div>
-        <div class="result-card">
-          <div class="result-title">Hasil pencocokan</div>
-          <div class="result-image-box">
-            <img
-              src="/Project_Alin/Asset/camera_icon.svg"
-              alt="Hasil Pencocokan"
-              class="result-camera-icon"
-            />
-          </div>
+        <div class="result-action">
+          <button id="lihat-hasil-btn">Lihat hasil</button>
+          <button id="next-btn" class="result-next-btn">
+            Next <span style="font-size: 1.2em">&#8594;</span>
+          </button>
         </div>
       </div>
     </main>
 
-    <div class="popup-match-result" id="popup-match-result">
-      <div class="popup-match-card">
-        <div class="popup-match-icon">
-          <img src="/Project_Alin/Asset/checkmark2.png" alt="Sesuai" />
-        </div>
-        <div class="popup-match-title">Hasil pencocokan: sesuai</div>
-        <div class="popup-match-detail">
-          <div>Nama: <span id="popup-nama"></span></div>
-          <div>Akurasi: <span id="popup-akurasi"></span></div>
-          <div style="margin-top: 24px">
-            Execution time scanning: <span id="popup-exec"></span>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <script>
-      // Contoh data, bisa diganti dengan data asli
-      document.getElementById("popup-nama").textContent = "Nama Pengguna";
-      document.getElementById("popup-akurasi").textContent = "98.7%";
-      document.getElementById("popup-exec").textContent = "0.32s";
+      // Fungsi untuk load popup_result.html ke halaman
+      function loadPopupResult(callback) {
+        fetch("/Project_Alin/popup_result.html")
+          .then((res) => res.text())
+          .then((html) => {
+            document.body.insertAdjacentHTML("beforeend", html);
+            if (callback) callback();
+          });
+      }
+      document.addEventListener("DOMContentLoaded", function () {
+        loadPopupResult(function () {
+          // Tombol close pada popup
+          document.getElementById("popup-close-btn").onclick = function () {
+            document.getElementById("popup-match-result").style.display =
+              "none";
+          };
+          // Tombol lihat hasil
+          document.getElementById("lihat-hasil-btn").onclick = function () {
+            document.getElementById("popup-match-result").style.display =
+              "flex";
+          };
+          // Tampilkan popup pertama kali
+          document.getElementById("popup-match-result").style.display = "flex";
+        });
 
-      // Tampilkan popup (bisa di-trigger sesuai kebutuhan)
-      document.getElementById("popup-match-result").style.display = "flex";
+        // Tombol next
+        document.getElementById("next-btn").onclick = function () {
+          window.location.href = "end.html";
+        };
+      });
     </script>
   </body>
 </html>
