--- a/Project_Alin/camera_page.html
+++ b/Project_Alin/camera_page.html
@@ -46,6 +46,10 @@
         <div class="camera-page-box">
           <div class="camera-page-left">
             <div class="camera-page-icon"></div>
+            <!-- Tombol capture di bawah icon kamera -->
+            <button class="camera-capture-btn" title="Ambil Foto">
+              <img src="/Project_Alin/Asset/capture_icon.svg" alt="Capture" />
+            </button>
           </div>
           <div class="camera-page-right">
             <p class="camera-page-desc">
