--- a/Project_Alin/camera_page.html
+++ b/Project_Alin/camera_page.html
@@ -83,7 +83,7 @@
 
     <script>
       function loadPopup(callback) {
-        fetch("/Project_Alin/popup.html")
+        fetch("/Project_Alin/popup/popup.html")
           .then((res) => res.text())
           .then((html) => {
             document.body.insertAdjacentHTML("beforeend", html);
