--- a/Project_Alin/result_copy.html
+++ b/Project_Alin/result_copy.html
@@ -92,7 +92,7 @@
 
         // Tombol next
         document.getElementById("next-btn").onclick = function () {
-          window.location.href = "end.html";
+          window.location.href = "final.html";
         };
       });
     </script>
