--- a/Project_Alin/dataset_input_name.html
+++ b/Project_Alin/dataset_input_name.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="/Project_Alin/CSS/dataset_input_name.css" />
     <link rel="stylesheet" href="/Project_Alin/CSS/style.css" />
+    <link rel="stylesheet" href="/Project_Alin/CSS/popup.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -61,7 +62,9 @@
             </div>
           </div>
           <!-- KOTAK KANAN + TOMBOL NEXT -->
-          <div style="display: flex; flex-direction: column; align-items: flex-end;">
+          <div
+            style="display: flex; flex-direction: column; align-items: flex-end"
+          >
             <div class="dataset-input-card dataset-input-card-info">
               <p>
                 <a href="dataset_input_choice.html" class="dataset-link-green"
@@ -70,11 +73,8 @@
                 <span> jika ingin<br />mengulangi pengambilan dataset</span>
               </p>
             </div>
-            <div class="dataset-next-btn-container">
-              <button
-                class="dataset-input-name-next"
-                onclick="window.location.href='input_face.html'"
-              >
+            <div class="dataset-next-btn-container" id="nextBtn">
+              <button class="dataset-input-name-next" id="nextBtn">
                 Next &rarr;
               </button>
             </div>
@@ -90,5 +90,33 @@
         <p>-</p>
       </div>
     </footer>
+    <script>
+      // Fungsi untuk load popup.html ke halaman
+      function loadPopup(callback) {
+        fetch("/Project_Alin/popup/popup.html")
+          .then((res) => res.text())
+          .then((html) => {
+            document.body.insertAdjacentHTML("beforeend", html);
+            if (callback) callback();
+          });
+      }
+      // Panggil saat halaman siap
+      document.addEventListener("DOMContentLoaded", function () {
+        loadPopup(function () {
+          // buat ganti pesan popup khusus halaman ini
+          const popupText = document.getElementById("popup-success-text");
+          if (popupText) popupText.textContent = "Dataset berhasil ditambahkan";
+        });
+      });
+      document
+        .getElementById("nextBtn")
+        .addEventListener("click", function (e) {
+          e.preventDefault();
+          document.getElementById("popup-success").style.display = "flex";
+          setTimeout(function () {
+            document.getElementById("popup-success").style.display = "none";
+          }, 1000);
+        });
+    </script>
   </body>
 </html>
