--- a/Project_Alin/dataset_input.html
+++ b/Project_Alin/dataset_input.html
@@ -117,10 +117,7 @@
       // Tampilkan popup saat tombol Next diklik
       nextBtn.addEventListener("click", function (e) {
         e.preventDefault();
-        document.getElementById("popup-success").style.display = "flex";
-        setTimeout(function () {
-          document.getElementById("popup-success").style.display = "none";
-        }, 2000);
+        window.location.href = "dataset_input_name.html";
       });
     </script>
   </body>
