--- a/Project_Alin/final.html
+++ b/Project_Alin/final.html
@@ -71,5 +71,11 @@
       </div>
     </footer>
     <!-- Footer -->
+    <script>
+      // Redirect otomatis ke halaman awal setelah 4 detik
+      setTimeout(function () {
+        window.location.href = "index.html";
+      }, 2000);
+    </script>
   </body>
 </html>
