--- a/Project_Alin/scanning.html
+++ b/Project_Alin/scanning.html
@@ -63,4 +63,10 @@
       </div>
     </div>
   </body>
+  <script>
+    // Redirect otomatis ke result.html setelah 2.5 detik
+    setTimeout(function () {
+      window.location.href = "result.html";
+    }, 1500); // durasi tunggu (ms), bisa diubah sesuai kebutuhan
+  </script>
 </html>
