--- a/Project_Alin/folder_face_page.html
+++ b/Project_Alin/folder_face_page.html
@@ -121,7 +121,8 @@
           document.getElementById("popup-success").style.display = "flex";
           setTimeout(function () {
             document.getElementById("popup-success").style.display = "none";
-          }, 2000);
+            window.location.href = "scanning.html"; // Redirect ke scanning.html
+          }, 1200); // durasi popup (ms), bisa diubah sesuai kebutuhan
         });
     </script>
   </body>
